...
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing" >

        <TextView
            android:id="@+id/brick_set_x_label"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_set_x" >
        </TextView >

        <TextView
            android:id="@+id/brick_set_x_prototype_text_view"
            style="@style/BrickPrototypeTextView" >
        </TextView >
...
