...
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing" >

        <TextView
            android:id="@+id/if_label"
            style="@style/BrickText.Multiple"
            android:text="@string/brick_if_begin" >
        </TextView >

        <TextView
            android:id="@+id/brick_if_begin_edit_text"
            style="@style/BrickEditText"
            app:layout_inputType="number"
...
