...
        app:horizontalSpacing="@dimen/brick_flow_layout_horizontal_spacing"
        app:verticalSpacing="@dimen/brick_flow_layout_vertical_spacing">

        <TextView
            android:id="@+id/brick_when_background_text_view"
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_when_background" />

        <Spinner
            android:id="@+id/brick_when_background_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false" />
    </org.catrobat.catroid.ui.BrickLayout>

...
