...

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_new_look_paintroid"
                android:background="@drawable/new_object_dialog_selector"
                android:gravity="center"
                android:text="@string/add_look_draw_new_image"
                android:textSize="?attr/medium"
                app:drawableTopCompat="@drawable/ic_draw_image" />

...
